--- a/index.html
+++ b/index.html
@@ -223,6 +223,51 @@
       background: #4caf50;
     }
 
+    /* Object controls */
+    #object-controls {
+      position: absolute;
+      background: rgba(42, 42, 42, 0.95);
+      border: 1px solid #3a3a3a;
+      border-radius: 8px;
+      padding: 8px;
+      display: none;
+      flex-direction: row;
+      gap: 4px;
+      z-index: 1000;
+      pointer-events: auto;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    }
+
+    .object-control-button {
+      background: #3a3a3a;
+      border: none;
+      border-radius: 6px;
+      padding: 8px;
+      cursor: pointer;
+      color: #ffffff;
+      font-size: 12px;
+      transition: background 0.2s;
+      min-width: 32px;
+      height: 32px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 500;
+    }
+
+    .object-control-button:hover {
+      background: #4a4a4a;
+    }
+
+    .object-control-button.active {
+      background: #5a8fd6;
+    }
+
+    .object-control-button svg {
+      width: 16px;
+      height: 16px;
+    }
+
     /* Multiplayer cursors */
     .multiplayer-cursor {
       position: absolute;
@@ -330,6 +375,27 @@
 
       <div id="canvas-container">
         <canvas id="canvas"></canvas>
+        <div id="object-controls">
+          <button class="object-control-button active" data-mode="translate" title="Move (Q)">
+            <svg viewBox="0 0 24 24" fill="currentColor">
+              <path d="M12 2L8 6h3v6h2V6h3l-4-4z"/>
+              <path d="M12 22l4-4h-3v-6h-2v6h-3l4 4z"/>
+              <path d="M2 12l4 4v-3h6v-2H6v-3l-4 4z"/>
+              <path d="M22 12l-4-4v3h-6v2h6v3l4-4z"/>
+            </svg>
+          </button>
+          <button class="object-control-button" data-mode="rotate" title="Rotate (W)">
+            <svg viewBox="0 0 24 24" fill="currentColor">
+              <path d="M12 2V4h8.5c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5H12v2l-6-3.5L12 2z"/>
+              <circle cx="12" cy="12" r="3" fill="none" stroke="currentColor" stroke-width="2"/>
+            </svg>
+          </button>
+          <button class="object-control-button" data-mode="scale" title="Resize (E)">
+            <svg viewBox="0 0 24 24" fill="currentColor">
+              <path d="M12 2l3.09 6.26L22 9l-5.91 5.91L18 22l-6-3.15L6 22l1.91-7.09L2 9l6.91-.74L12 2z"/>
+            </svg>
+          </button>
+        </div>
       </div>
     </div>
 
