duplicate button and fix bug

--- a/index.html
+++ b/index.html
@@ -395,6 +395,14 @@
               <path d="M12 2l3.09 6.26L22 9l-5.91 5.91L18 22l-6-3.15L6 22l1.91-7.09L2 9l6.91-.74L12 2z"/>
             </svg>
           </button>
+          <button class="object-control-button" data-action="duplicate" title="Duplicate (Ctrl+D)">
+            <svg viewBox="0 0 24 24" fill="currentColor">
+              <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/>
+              <rect x="10" y="9" width="8" height="2"/>
+              <rect x="10" y="12" width="8" height="2"/>
+              <rect x="10" y="15" width="5" height="2"/>
+            </svg>
+          </button>
         </div>
       </div>
     </div>
