--- a/index.html
+++ b/index.html
@@ -268,6 +268,11 @@
       height: 16px;
     }
 
+    /* Offset object control tooltips slightly upwards */
+    #object-controls .tooltip::after {
+      transform: translateY(-200%) translateX(-20%);
+    }
+
     /* Multiplayer cursors */
     .multiplayer-cursor {
       position: absolute;
@@ -376,7 +381,7 @@
       <div id="canvas-container">
         <canvas id="canvas"></canvas>
         <div id="object-controls">
-          <button class="object-control-button active" data-mode="translate" title="Move (Q)">
+          <button class="object-control-button tooltip active" data-mode="translate" data-tooltip="Move selected objects (Q)">
             <svg viewBox="0 0 24 24" fill="currentColor">
               <path d="M12 2L8 6h3v6h2V6h3l-4-4z"/>
               <path d="M12 22l4-4h-3v-6h-2v6h-3l4 4z"/>
@@ -384,18 +389,18 @@
               <path d="M22 12l-4-4v3h-6v2h6v3l4-4z"/>
             </svg>
           </button>
-          <button class="object-control-button" data-mode="rotate" title="Rotate (W)">
+          <button class="object-control-button tooltip" data-mode="rotate" data-tooltip="Rotate selected objects (W)">
             <svg viewBox="0 0 24 24" fill="currentColor">
               <path d="M12 2V4h8.5c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5H12v2l-6-3.5L12 2z"/>
               <circle cx="12" cy="12" r="3" fill="none" stroke="currentColor" stroke-width="2"/>
             </svg>
           </button>
-          <button class="object-control-button" data-mode="scale" title="Resize (E)">
+          <button class="object-control-button tooltip" data-mode="scale" data-tooltip="Resize selected objects (E)">
             <svg viewBox="0 0 24 24" fill="currentColor">
               <path d="M12 2l3.09 6.26L22 9l-5.91 5.91L18 22l-6-3.15L6 22l1.91-7.09L2 9l6.91-.74L12 2z"/>
             </svg>
           </button>
-          <button class="object-control-button" data-action="duplicate" title="Duplicate (Ctrl+D)">
+          <button class="object-control-button tooltip" data-action="duplicate" data-tooltip="Duplicate selected objects (CMD+D)">
             <svg viewBox="0 0 24 24" fill="currentColor">
               <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/>
               <rect x="10" y="9" width="8" height="2"/>
