undo redo finally fucking works for complex geometry and for cylindrical shapes yes

--- a/index.html
+++ b/index.html
@@ -468,14 +468,33 @@
             </svg>
           </button>
           <button class="object-control-button tooltip" data-mode="rotate" data-tooltip="Rotate selected objects (W)">
-            <svg viewBox="0 0 24 24" fill="currentColor">
-              <path d="M12 2V4h8.5c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5H12v2l-6-3.5L12 2z"/>
-              <circle cx="12" cy="12" r="3" fill="none" stroke="currentColor" stroke-width="2"/>
-            </svg>
+            <svg id='3D_Rotate_24' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'><rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
+              <g transform="matrix(0.52 0 0 0.52 12 12)" >
+              <path style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(255, 255, 255); fill-rule: nonzero; opacity: 1;" transform=" translate(-25, -27.02)" d="M 25 13 C 13.441406 13 1 16.441406 1 24 C 1 30.6875 10.746094 34.152344 21 34.859375 L 21 41.046875 L 32.628906 32 L 21 22.953125 L 21 28.847656 C 11.800781 28.140625 7 25.132813 7 24 C 7 22.714844 13.1875 19 25 19 C 36.8125 19 43 22.714844 43 24 C 43 24.554688 41.421875 26.210938 36.726563 27.539063 L 36 27.742188 L 36 33.917969 L 37.238281 33.609375 C 44.824219 31.734375 49 28.320313 49 24 C 49 16.441406 36.558594 13 25 13 Z" stroke-linecap="round" />
+              </g>
+              </svg>
           </button>
-          <button class="object-control-button tooltip" data-mode="scale" data-tooltip="Resize selected objects (E)">
-            <svg viewBox="0 0 24 24" fill="currentColor">
-              <path d="M12 2l3.09 6.26L22 9l-5.91 5.91L18 22l-6-3.15L6 22l1.91-7.09L2 9l6.91-.74L12 2z"/>
+          <button class="object-control-button tooltip" data-mode="resize" data-tooltip="Resize selected objects (E)">
+            <svg id='Arrows_Expand_Diagonal_1_24' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'><rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
+              <g transform="matrix(1.43 0 0 1.43 12 12)" >
+                <g style="" >
+                  <g transform="matrix(1 0 0 1 4.25 -4.25)" >
+                    <path style="stroke: rgb(255, 255, 255); stroke-width: 1; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;" transform=" translate(-11.25, -2.75)" d="M 9 5 L 13.5 0.5" stroke-linecap="round" />
+                  </g>
+                  <g transform="matrix(1 0 0 1 4.5 -4.5)" >
+                    <path style="stroke: rgb(255, 255, 255); stroke-width: 1; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;" transform=" translate(-11.5, -2.5)" d="M 9.5 0.5 L 13.5 0.5 L 13.5 4.5" stroke-linecap="round" />
+                  </g>
+                  <g transform="matrix(1 0 0 1 -4.25 4.25)" >
+                    <path style="stroke: rgb(255, 255, 255); stroke-width: 1; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;" transform=" translate(-2.75, -11.25)" d="M 5 9 L 0.5 13.5" stroke-linecap="round" />
+                  </g>
+                  <g transform="matrix(1 0 0 1 -4.5 4.5)" >
+                    <path style="stroke: rgb(255, 255, 255); stroke-width: 1; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;" transform=" translate(-2.5, -11.5)" d="M 4.5 13.5 L 0.5 13.5 L 0.5 9.5" stroke-linecap="round" />
+                  </g>
+                  <g transform="matrix(1 0 0 1 0 0)" >
+                    <path style="stroke: rgb(255, 255, 255); stroke-width: 1; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;" transform=" translate(-7, -7)" d="M 4 4 L 10 10" stroke-linecap="round" />
+                  </g>
+                </g>
+              </g>
             </svg>
           </button>
           <button class="object-control-button tooltip" data-action="duplicate" data-tooltip="Duplicate selected objects (CMD+D)">
