--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@
 
         <div id="canvas-info">
           <div id="canvas-id" style="font-size: 10px; color: #888; margin-bottom: 4px; word-break: break-all;"></div>
+          <button id="new-canvas" class="tool-button tooltip" data-tooltip="New Canvas">New</button>
           <button id="share-canvas" class="tool-button tooltip" data-tooltip="Share Canvas">Share</button>
         </div>
 
