--- a/index.html
+++ b/index.html
@@ -386,6 +386,95 @@
       background: #4a4a4a;
     }
 
+    .modifiers-menu-item .icon {
+      margin-right: 8px;
+      font-size: 12px;
+    }
+
+    /* Text Edit Modal */
+    .modal-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+
+    .modal-overlay.show {
+      display: flex;
+    }
+
+    .modal-content {
+      background: #2a2a2a;
+      border-radius: 8px;
+      padding: 20px;
+      min-width: 300px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+    }
+
+    .modal-content h3 {
+      margin: 0 0 15px 0;
+      color: #ffffff;
+      font-size: 18px;
+      font-weight: 500;
+    }
+
+    .modal-content input {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #555;
+      border-radius: 4px;
+      background: #3a3a3a;
+      color: #ffffff;
+      font-size: 16px;
+      margin-bottom: 15px;
+    }
+
+    .modal-content input:focus {
+      outline: none;
+      border-color: #5a8fd6;
+      box-shadow: 0 0 0 2px rgba(90, 143, 214, 0.3);
+    }
+
+    .modal-buttons {
+      display: flex;
+      gap: 10px;
+      justify-content: flex-end;
+    }
+
+    .modal-btn {
+      padding: 8px 16px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 14px;
+      font-weight: 500;
+      transition: background 0.2s;
+    }
+
+    .modal-btn.cancel {
+      background: #666;
+      color: #ffffff;
+    }
+
+    .modal-btn.cancel:hover {
+      background: #777;
+    }
+
+    .modal-btn.confirm {
+      background: #5a8fd6;
+      color: #ffffff;
+    }
+
+    .modal-btn.confirm:hover {
+      background: #6a9fe6;
+    }
+
     .checkmark {
       width: 16px;
       text-align: center;
@@ -524,6 +613,7 @@
         <button class="tool-button tooltip" data-tool="cylinder" data-tooltip="Cylinder (C)">Cylinder</button>
         <button class="tool-button tooltip" data-tool="rectangle" data-tooltip="Rectangle (R)">Rectangle</button>
         <button class="tool-button tooltip" data-tool="circle" data-tooltip="Circle (O)">Circle</button>
+        <button class="tool-button tooltip" data-tool="text" data-tooltip="Text (T)">Text</button>
 
         <hr>
 
@@ -639,6 +729,10 @@
               </svg>
             </button>
             <div class="modifiers-menu">
+              <div class="modifiers-menu-item" data-modifier="edit-text">
+                <span class="icon">✏️</span>
+                Edit Text
+              </div>
               <div class="modifiers-menu-item" data-modifier="bevel">
                 <span class="checkmark">✓</span>
                 Bevel
@@ -656,6 +750,18 @@
       </div>
       <div id="coordinates">X: 0, Y: 0, Z: 0</div>
       <div id="fps">FPS: 60</div>
+    </div>
+
+    <!-- Text Edit Modal -->
+    <div id="text-edit-modal" class="modal-overlay">
+      <div class="modal-content">
+        <h3>Edit Text</h3>
+        <input type="text" id="text-input" placeholder="Enter text..." maxlength="50">
+        <div class="modal-buttons">
+          <button id="text-cancel" class="modal-btn cancel">Cancel</button>
+          <button id="text-confirm" class="modal-btn confirm">OK</button>
+        </div>
+      </div>
     </div>
   </div>
 
