bug bash round 2

--- a/index.html
+++ b/index.html
@@ -648,6 +648,7 @@
     <div id="main-container">
       <div id="toolbar">
         <button class="tool-button tooltip" data-tool="select" data-tooltip="Select (V)">Select</button>
+        <button class="tool-button tooltip" data-tool="multiselect" data-tooltip="Multi-Select (M)">Multi-Select</button>
         <button class="tool-button tooltip" data-tool="box" data-tooltip="Box (B)">Box</button>
         <button class="tool-button tooltip" data-tool="sphere" data-tooltip="Sphere (S)">Sphere</button>
         <button class="tool-button tooltip" data-tool="cylinder" data-tooltip="Cylinder (C)">Cylinder</button>
