clear canvas feat

--- a/index.html
+++ b/index.html
@@ -163,6 +163,46 @@
       opacity: 1;
     }
 
+    /* Top right controls */
+    #top-right-controls {
+      position: absolute;
+      top: 20px; /* Just below the header */
+      right: 20px;
+      z-index: 10;
+    }
+
+    .clear-button {
+      background: #dc3545;
+      border: 1px solid #c82333;
+      border-radius: 6px;
+      padding: 10px 16px;
+      cursor: pointer;
+      color: #ffffff;
+      font-size: 14px;
+      font-weight: 500;
+      transition: all 0.2s ease;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      box-shadow: 0 2px 4px rgba(220, 53, 69, 0.3);
+    }
+
+    .clear-button:hover {
+      background: #c82333;
+      box-shadow: 0 4px 8px rgba(220, 53, 69, 0.4);
+      transform: translateY(-1px);
+    }
+
+    .clear-button:active {
+      transform: translateY(0);
+      box-shadow: 0 2px 4px rgba(220, 53, 69, 0.3);
+    }
+
+    .clear-button svg {
+      width: 18px;
+      height: 18px;
+    }
+
     /* View controls */
     #view-controls {
       position: absolute;
@@ -678,6 +718,15 @@
         </div>
 
         <div id="notifications-container"></div>
+      </div>
+
+      <div id="top-right-controls">
+        <button id="clear-canvas" class="clear-button tooltip" data-tooltip="Clear Canvas (Warning: This will remove all shapes!)">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"/>
+          </svg>
+          Clear Canvas
+        </button>
       </div>
 
       <div id="view-controls">
