boolean SUBTRACTION YES extrusion intrusion invasion DONE

--- a/index.html
+++ b/index.html
@@ -695,6 +695,7 @@
         <button class="tool-button tooltip" data-tool="rectangle" data-tooltip="Rectangle (R)">Rectangle</button>
         <button class="tool-button tooltip" data-tool="circle" data-tooltip="Circle (O)">Circle</button>
         <button class="tool-button tooltip" data-tool="text" data-tooltip="Text (T)">Text</button>
+        <button class="tool-button tooltip" data-tool="boolean-subtract" data-tooltip="Boolean Subtract (U)">Boolean -</button>
 
         <div class="complex-shapes-dropdown">
           <button class="tool-button tooltip complex-shapes-button" data-tooltip="Complex Shapes">Complex ▶</button>
@@ -726,6 +727,12 @@
             <path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"/>
           </svg>
           Clear Canvas
+        </button>
+        <button id="apply-boolean" class="clear-button tooltip" data-tooltip="Apply Boolean Operation (Enter)" style="display: none; background: #28a745; border-color: #1e7e34;">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M9,20.42L2.79,14.21L5.62,11.38L9,14.76L18.88,4.88L21.71,7.71L9,20.42Z"/>
+          </svg>
+          Apply
         </button>
       </div>
 
