--- a/index.html
+++ b/index.html
@@ -617,6 +617,37 @@
       box-shadow: 0 0 0 2px rgba(90, 143, 214, 0.3);
     }
 
+    .font-size-control {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 15px;
+    }
+
+    .font-size-control label {
+      color: #ffffff;
+      font-size: 14px;
+      font-weight: 500;
+      white-space: nowrap;
+    }
+
+    .font-size-control input {
+      width: 80px;
+      padding: 6px 8px;
+      border: 1px solid #555;
+      border-radius: 4px;
+      background: #3a3a3a;
+      color: #ffffff;
+      font-size: 14px;
+      text-align: center;
+    }
+
+    .font-size-control input:focus {
+      outline: none;
+      border-color: #5a8fd6;
+      box-shadow: 0 0 0 2px rgba(90, 143, 214, 0.3);
+    }
+
     .modal-buttons {
       display: flex;
       gap: 10px;
@@ -833,8 +864,17 @@
         </button>
         <div class="undo-redo-container">
           <button id="undo-button" class="bottom-button" disabled data-tooltip="Undo (Cmd+Z)">
-            <svg viewBox="0 0 24 24" fill="currentColor">
-              <path d="M12.5 8c-2.65 0-5.05.99-6.9 2.6L3.71 8.71C3.08 8.08 2 8.52 2 9.41V15c0 .89.89 1.34 1.41.71l1.89-1.89c1.5-1.5 3.57-2.43 5.7-2.43 4.42 0 8 3.58 8 8s-3.58 8-8 8c-1.55 0-3-.45-4.24-1.21C6.22 25.49 7.07 24 8.5 24c.83 0 1.5-.67 1.5-1.5S9.33 21 8.5 21c-1.38 0-2.5.48-3.34 1.34C6.58 21.48 8.5 19.5 8.5 16c0-3.31-2.69-6-6-6s-6 2.69-6 6c0 1.66.67 3.16 1.76 4.24l-1.42 1.42C-3.08 21.08-2.64 20-1.41 20h5.59c.89 0 .71 1.08.29 1.41l-1.42 1.42C2.24 23.93 1.34 23.27 1.34 22.38V16.8c0-.89 1.08-.71 1.41.29l1.42 1.42C5.05 17.01 7.45 16 10.1 16c2.65 0 5.05.99 6.9 2.6l1.89-1.89c.63-.63-.52-1.71-1.41-.71l-1.89 1.89C14.05 19.49 12.65 20 11.1 20c-4.42 0-8-3.58-8-8s3.58-8 8-8c-1.55 0-3 .45-4.24 1.21C15.78 6.49 14.93 8 13.5 8c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5c1.38 0 2.5-.48 3.34-1.34C17.42 10.52 19.34 12.5 19.34 16c0 3.31-2.69 6-6 6s-6-2.69-6-6c0-1.66-.67-3.16-1.76-4.24l1.42-1.42c.63.63 1.71-.52.71-1.41l-1.42-1.42C6.95 6.99 8.45 6 11.1 6c4.42 0 8 3.58 8 8s-3.58 8-8 8c-1.55 0-3-.45-4.24-1.21C6.22 19.49 7.07 18 8.5 18c.83 0 1.5-.67 1.5-1.5S9.33 15 8.5 15c-1.38 0-2.5.48-3.34 1.34C6.58 14.48 8.5 12.5 8.5 9c0-3.31-2.69-6-6-6z"/>
+            <svg id='Undo_24' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'><rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
+              <g transform="matrix(0.04 0 0 0.04 24 24)" >
+                <g style="" >
+                  <g transform="matrix(1 0 0 1 0 0)" >
+                    <path style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(53,113,128); fill-rule: nonzero; opacity: 1;" transform=" translate(-256, -256)" d="M 7.9 256 C 7.9 119 119 7.9 256 7.9 C 393 7.9 504.1 119 504.1 256 C 504.1 393 393 504.1 256 504.1 C 119 504.1 7.9 393 7.9 256 z" stroke-linecap="round" />
+                  </g>
+                  <g transform="matrix(1 0 0 1 6.27 -18.1)" >
+                    <path style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(255,255,255); fill-rule: nonzero; opacity: 1;" transform=" translate(-262.27, -237.9)" d="M 346.5 148.7 C 325.5 142.89999999999998 299.2 146.79999999999998 277.9 146.79999999999998 C 260 146.79999999999998 242.09999999999997 146.79999999999998 224.2 146.79999999999998 C 224.2 136.99999999999997 224.2 127.29999999999998 224.2 117.49999999999999 C 224.2 114.79999999999998 223 112.89999999999999 221.29999999999998 111.69999999999999 C 219.2 109.79999999999998 216.29999999999998 109.1 213.2 111.1 C 184.89999999999998 129.2 156.6 147.39999999999998 128.29999999999998 165.5 C 123.49999999999999 168.6 123.59999999999998 175.2 128.29999999999998 178.2 C 156.6 196.29999999999998 184.89999999999998 214.5 213.2 232.6 C 217.89999999999998 235.6 224.2 231.6 224.2 226.29999999999998 C 224.2 214.49999999999997 224.2 202.7 224.2 190.89999999999998 C 258.7 190.89999999999998 293.29999999999995 190.89999999999998 327.79999999999995 190.89999999999998 C 350.09999999999997 190.89999999999998 355.49999999999994 207.49999999999997 355.49999999999994 226.2 C 355.49999999999994 249 355.49999999999994 271.7 355.49999999999994 294.5 C 355.49999999999994 313.9 341.3999999999999 321.8 324.19999999999993 321.8 C 303.8999999999999 321.8 283.49999999999994 321.8 263.19999999999993 321.8 C 223.89999999999992 321.8 184.59999999999994 321.8 145.29999999999993 321.8 C 116.79999999999993 321.8 116.59999999999992 365.90000000000003 144.99999999999991 365.90000000000003 C 190.39999999999992 365.90000000000003 235.7999999999999 365.90000000000003 281.19999999999993 365.90000000000003 C 297.5999999999999 365.90000000000003 313.8999999999999 365.90000000000003 330.29999999999995 365.90000000000003 C 368.49999999999994 365.90000000000003 399.59999999999997 334.00000000000006 399.59999999999997 296.1 C 399.6 242.9 413.1 167.1 346.5 148.7 z" stroke-linecap="round" />
+                  </g>
+                </g>
+              </g>
             </svg>
             Undo
           </button>
@@ -970,6 +1010,10 @@
       <div class="modal-content">
         <h3>Edit Text</h3>
         <input type="text" id="text-input" placeholder="Enter text..." maxlength="50">
+        <div class="font-size-control">
+          <label for="font-size-input">Font Size:</label>
+          <input type="number" id="font-size-input" min="0.1" max="10" step="0.1" value="1">
+        </div>
         <div class="modal-buttons">
           <button id="text-cancel" class="modal-btn cancel">Cancel</button>
           <button id="text-confirm" class="modal-btn confirm">OK</button>
